# undoc

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: bindings.yml  ci.yml  release.yml
benches/: parse_benchmark.rs
bindings/: verify-native-bindings.sh
bindings/csharp/: Undoc.cs  Undoc.sln
bindings/csharp/Undoc/: InternalsVisibleTo.cs  NativeMethods.cs  README.md  Undoc.csproj  UndocDocument.cs
bindings/csharp/Undoc.Tests/: SkippableFactAttribute.cs  Undoc.Tests.csproj  UndocDocumentTests.cs
bindings/python/: README.md  pyproject.toml
bindings/python/src/undoc/: _native.py  undoc.py
bindings/python/tests/: conftest.py  test_undoc.py
cli/: Cargo.toml
cli/src/: main.rs  update.rs  writer.rs
src/: charts.rs  container.rs  decode.rs  detect.rs  error.rs  ffi.rs  lib.rs  streaming.rs
src/docx/: mod.rs  numbering.rs  parser.rs  styles.rs
src/model/: document.rs  paragraph.rs  resource.rs  table.rs
src/pptx/: parser.rs
src/render/: cleanup.rs  heading_analyzer.rs  markdown.rs  mod.rs  options.rs  style_mapping.rs  text.rs
src/xlsx/: mod.rs  parser.rs  shared_strings.rs  styles.rs
tests/: officedissector_corpus.rs  quality_report.rs
