[workspace]
members = [".", "cli"]
resolver = "2"

[package]
name = "undoc"
version = "0.1.16"
edition = "2021"
authors = ["iyulab"]
description = "High-performance Microsoft Office document extraction to Markdown"
license = "MIT"
repository = "https://github.com/iyulab/undoc"
documentation = "https://docs.rs/undoc"
readme = "README.md"
keywords = ["docx", "xlsx", "pptx", "markdown", "office"]
categories = ["parsing", "text-processing"]
rust-version = "1.75"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["docx", "xlsx", "pptx"]
docx = []
xlsx = []
pptx = []
async = ["tokio"]
ffi = []

[dependencies]
# ZIP handling
zip = "2.2"

# XML parsing
quick-xml = { version = "0.37", features = ["serialize"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Text processing
unicode-normalization = "0.1"
unicode-width = "0.2"

# Optional: Async
tokio = { version = "1.42", features = ["rt", "fs"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"

[[bench]]
name = "parse_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
