[package]
name = "undoc-cli"
version = "0.3.0"
edition = "2021"
authors = ["iyulab"]
description = "CLI for undoc - Microsoft Office document extraction"
license = "MIT"
repository = "https://github.com/iyulab/undoc"

[[bin]]
name = "undoc"
path = "src/main.rs"

[dependencies]
undoc = { version = "0.3.0", path = ".." }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
serde_json = "1.0"
self_update = { version = "0.41", features = ["archive-zip", "archive-tar", "compression-flate2", "compression-zip-deflate"] }
semver = "1.0"
