[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "undoc"
version = "0.1.15"
description = "High-performance Microsoft Office document extraction to Markdown"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "iyulab", email = "tech@iyulab.com" }]
keywords = ["office", "docx", "xlsx", "pptx", "markdown", "extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/iyulab/undoc"
Documentation = "https://github.com/iyulab/undoc#readme"
Repository = "https://github.com/iyulab/undoc"
Issues = "https://github.com/iyulab/undoc/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "mypy>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
undoc = ["lib/**/*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
